[project]
name = "no-guns-lol"
version = "1.0.1"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "cachetools>=6.1.0",
    "coloredlogs>=15.0.1",
    "discord-py-self",
]

[tool.uv.sources]
discord-py-self = { git = "https://github.com/dolfies/discord.py-self.git", rev = "f0e81c5" }
